Create variables.less,scaffolding.less,reviews.less,price.less,page-intro.less,page-header.less,page-footer.less,features.less. И начал  вёрстку проекта с помощью препроцессора. Задал bg, bg-image,f-size, f-f, f-w, and color

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,13 @@
-@import "global/variables.less";
+@import "variables.less";
 
-@import 'global/fonts.less';
+@import "global/fonts.less";
+
+@import "scaffolding.less";
+
+
+@import "blocks/page-header.less";
+@import "blocks/page-intro.less";
+@import "blocks/features.less";
+@import "blocks/reviews.less";
+@import "blocks/price.less";
+@import "blocks/page-footer.less";
