Create site-list.less and add ch-*

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -2,5 +2,7 @@
   &__heading {
     color: @grey--dark;
     font-size: @font-size--h2;
+    font-weight: @font-weight--light;
+    line-height: @line-height--medium;
   }
 }
