--- a/source/less/blocks/download-app.less
+++ b/source/less/blocks/download-app.less
@@ -1,3 +1,18 @@
 .download-app {
   background-color: @bg--dark;
+
+  &__btn {
+    color: @text--white;
+    font-size: @font-size--big;
+    font-weight: @font-weight--big;
+    line-height: @font-size--big;
+    text-decoration: none;
+  }
+
+  &__description {
+    color: @text--white;
+    font-size: @font-size--reg;
+    font-weight: @font-weight--light;
+    line-height: @line-height--medium;
+  }
 }
