--- a/source/less/blocks/features-item.less
+++ b/source/less/blocks/features-item.less
@@ -1,9 +1,15 @@
 .features-item {
   &__title {
-    color: @bg--dark;
+    color: @black;
+    font-size: @font-size--big;
+    font-weight: @font-weight--big;
+    line-height: @line-height--medium;
   }
 
   &__text {
     color: @grey--dark;
+    font-size: @font-size--reg;
+    font-weight: @font-weight--regular;
+    line-height: @line-height--medium;
   }
 }
