--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -2,8 +2,17 @@
   background-color: @bg--white;
 
   &__author-name {
+    color: @black;
     font-size: @font-size--big;
     font-weight: @font-weight--big;
+    line-height: @line-height--large;
     font-style: normal;
+  }
+
+  &__text {
+    color: @grey--dark;
+    font-size: @font-size--reg;
+    font-weight: @font-weight--regular;
+    line-height: @line-height--large;
   }
 }
