--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -23,5 +23,6 @@
 @font-weight--big:          bold;
 
 @line-height--base:         18px;
-@line-height--h1:           30px;
-@line-height--h2:           24px;
+@line-height--medium:       24px;
+@line-height--large:        30px;
+@line-height--big:          32px;
