--- a/source/less/blocks/contacts-item.less
+++ b/source/less/blocks/contacts-item.less
@@ -2,11 +2,14 @@
   &__title {
     color: @grey--dark;
     font-size: @font-size--big;
+    font-weight: @font-weight--big;
+    line-height: @line-height--base;
   }
 
   &__contact {
     color: @pink;
     font-size: @font-size--h2;
     font-weight: @font-weight--light;
+    line-height: @line-height--medium;
   }
 }
