--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -5,4 +5,11 @@
   &__wrapper {
     background-color: @bg--grey;
   }
+
+  &__heading {
+    color: @grey--dark;
+    font-size: @font-size--h2;
+    font-weight: @font-weight--light;
+    line-height: @line-height--medium;
+  }
 }
