--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -13,7 +13,7 @@ h1 {
   margin-top: 20px;
   padding-bottom: 9px;
   font-size: @font-size--h1;
-  line-height: @line-height--h1;
+  line-height: @line-height--large;
 }
 
 h2 {
