--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,8 +7,16 @@
 
 
 @import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/site-list.less";
 @import "blocks/page-intro.less";
+@import "blocks/download-app.less";
 @import "blocks/features.less";
+@import "blocks/features-item.less";
 @import "blocks/reviews.less";
 @import "blocks/price.less";
+@import "blocks/price-table.less";
 @import "blocks/page-footer.less";
+@import "blocks/contacts.less";
+@import "blocks/contacts-item.less";
+@import "blocks/map.less";
