--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,4 +1,5 @@
 body {
+  position: relative;
   width: 100%;
   margin: 0;
   text-align: center;
@@ -9,9 +10,19 @@ body {
   color: @grey--dark;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 h1 {
   margin-top: 20px;
-  padding-bottom: 9px;
+  padding-bottom: 10px;
   font-size: @font-size--h1;
   line-height: @line-height--large;
 }
@@ -25,4 +36,10 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+legend,
+fieldset {
+  margin: 0;
+  padding: 0;
 }
