--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,3 +20,9 @@
 @import "blocks/contacts.less";
 @import "blocks/contacts-item.less";
 @import "blocks/map.less";
+
+@import "blocks/posts-title.less";
+@import "blocks/posts-slogan.less";
+@import "blocks/posts-item.less";
+@import "blocks/filter-range.less";
+@import "blocks/copyright.less";
