--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,4 +4,8 @@
   width: 100%;
   border-top: 1px solid #000000;
   background-color: @grey--dark;
+
+  &__wrapper {
+    border-top: 1px solid @black;
+  }
 }
