--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,6 +1,11 @@
 .page-intro {
   background-color: @bg--dark;
   background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
-  background-position: center bottom, center top;
+  background-position: center, center top;
   background-repeat: no-repeat, no-repeat;
+  background-size: auto, auto;
+
+  &__wrapper {
+    padding: 415px 0 0;
+  }
 }
