--- a/source/less/blocks/price-table.less
+++ b/source/less/blocks/price-table.less
@@ -1,4 +1,17 @@
 .price-table {
+  width: 850px;
+  margin: 50px auto 35px;
+  border-collapse: collapse;
+
+  &__header {
+    width: 25%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: @grey--dark;
+    color: @text--white;
+    border: 2px solid #e5e5e5;
+  }
+
   &__flag {
     color: @text--white;
     font-size: @font-size--reg;
@@ -12,7 +25,6 @@
     font-size: @font-size--big;
     font-weight: @font-weight--big;
     line-height: @line-height--large;
-    background-color: @bg--dark;
   }
 
   &__title {
@@ -20,14 +32,18 @@
     font-size: @font-size--h2;
     font-weight: @font-weight--light;
     line-height: @line-height--large;
-    background-color: @bg--dark;
   }
 
   &__service {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 25px;
     color: @grey--dark;
     font-size: @font-size--reg;
     font-weight: @font-weight--regular;
     line-height: @line-height--large;
+    text-align: left;
     background-color: @bg--white;
+    border: 2px solid #e5e5e5;
   }
 }
