--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,7 +1,16 @@
 .site-list {
-  font-size: @font-size--big;
-  line-height: @line-height--big;
-  font-weight: @font-weight--big;
-  color: @text--white;
-  text-transform: uppercase;
+  &__item {
+    padding: 15px 10px 15px 0;
+    border-bottom: 1px solid @black;
+    border-top: 1px solid #485461;
+  }
+
+  &__link {
+    color: @text--white;
+    font-size: @font-size--big;
+    line-height: @line-height--big;
+    font-weight: @font-weight--big;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
 }
