Начал добавлять внутренние и внешние отступы и обводки для photo.html

--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -3,6 +3,7 @@
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-position: center top;
   background-repeat: no-repeat;
+  background-size: auto;
 
   &__heading {
     color: @text--white;
