Начал добавлять внутренние и внешние отступы и обводки для form.html

--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -1,7 +1,8 @@
 .page-title {
+  padding-top: 240px;
   background-color: @bg--dark;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: center top;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: auto;
 
