--- a/source/less/blocks/posts-title.less
+++ b/source/less/blocks/posts-title.less
@@ -1,7 +1,8 @@
 .posts-title {
-  background-color: #1d2631;
+  padding-top: 240px;
+  background-color: @bg--dark;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: center bottom;
+  background-position: center;
   background-repeat: no-repeat, no-repeat;
 
   &__heading {
