--- a/source/less/blocks/filter-range.less
+++ b/source/less/blocks/filter-range.less
@@ -6,6 +6,9 @@
     font-size: @font-size--big;
     font-weight: @font-weight--big;
     line-height: @line-height--base;
-    border-color: @pink;
+    text-decoration: none;
+    padding: 12px 35px 12px 35px;
+    border-radius: 50px;
+    border: 2px solid @pink;
   }
 }
