--- a/source/less/blocks/posts-item.less
+++ b/source/less/blocks/posts-item.less
@@ -3,6 +3,15 @@
     background-color: @bg--grey;
   }
 
+  &__img-wrapper {
+    padding: 0;
+    margin: 0;
+  }
+
+  &__review {
+    padding: 20px;
+  }
+
   &__flag {
     color: @text--white;
     font-size: @font-size--small;
