--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,7 +1,7 @@
 body {
-  position: relative;
   width: 100%;
   margin: 0;
+  padding: 0;
   text-align: center;
   font-family: @font-family--base;
   font-size: @font-size--reg;
@@ -13,23 +13,6 @@ body {
 img {
   max-width: 100%;
   height: auto;
-}
-
-p {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-h1 {
-  margin-top: 20px;
-  padding-bottom: 10px;
-  font-size: @font-size--h1;
-  line-height: @line-height--large;
-}
-
-h2 {
-  font-size: @font-size--h2;
-  color: #000000;
 }
 
 ul {
