Исправил критерии Д11 во всех файлах .less

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,8 +1,6 @@
-.copyright {
-  &__text {
-    color: @grey--dark;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--base;
-  }
+.copyright__text {
+  color: @grey--dark;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--base;
 }
