--- a/source/less/blocks/filter-range.less
+++ b/source/less/blocks/filter-range.less
@@ -1,14 +1,14 @@
 .filter-range {
   background-color: @bg--grey;
+}
 
-  &__btn {
-    color: @pink;
-    font-size: @font-size--big;
-    font-weight: @font-weight--big;
-    line-height: @line-height--base;
-    text-decoration: none;
-    padding: 12px 35px 12px 35px;
-    border-radius: 50px;
-    border: 2px solid @pink;
-  }
+.filter-range__btn {
+  color: @pink;
+  font-size: @font-size--big;
+  font-weight: @font-weight--big;
+  line-height: @line-height--base;
+  text-decoration: none;
+  padding: 12px 35px;
+  border-radius: 50px;
+  border: 2px solid @pink;
 }
