--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,44 +1,42 @@
-.form {
-  &__description {
-    color: @grey--dark;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--large;
-  }
+.form__description {
+  color: @grey--dark;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--large;
+}
 
-  &__title {
-    color: @pink;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--large;
-  }
+.form__title {
+  color: @pink;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--large;
+}
 
-  &__input {
-    color: @grey--dark;
-    font-size: @font-size--big;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--large;
-  }
+.form__input {
+  color: @grey--dark;
+  font-size: @font-size--big;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--large;
+}
 
-  &__fieldset {
-    border: none;
-    background-color: @bg--grey;
-  }
+.form__fieldset {
+  border: none;
+  background-color: @bg--grey;
+}
 
-  &__btn {
-    color: @text--white;
-    font-size: @font-size--big;
-    font-weight: @font-weight--big;
-    line-height: @line-height--large;
-    background-color: @green;
-    border: none;
-    text-transform: uppercase;
-  }
+.form__btn {
+  color: @text--white;
+  font-size: @font-size--big;
+  font-weight: @font-weight--big;
+  line-height: @line-height--large;
+  background-color: @green;
+  border: none;
+  text-transform: uppercase;
+}
 
-  &__required {
-    color: @grey--dark;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--large;
-  }
+.form__required {
+  color: @grey--dark;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--large;
 }
