--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -4,8 +4,8 @@
   background-position: center, center top;
   background-repeat: no-repeat, no-repeat;
   background-size: auto, auto;
+}
 
-  &__wrapper {
-    padding: 415px 0 0;
-  }
+.page-intro__wrapper {
+  padding: 415px 0 0;
 }
