--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -5,11 +5,11 @@
   background-position: top;
   background-repeat: no-repeat;
   background-size: auto;
+}
 
-  &__heading {
-    color: @text--white;
-    font-size: @font-size--h2;
-    font-weight: @font-weight--light;
-    line-height: @line-height--medium;
-  }
+.page-title__heading {
+  color: @text--white;
+  font-size: @font-size--h2;
+  font-weight: @font-weight--light;
+  line-height: @line-height--medium;
 }
