--- a/source/less/blocks/posts-item.less
+++ b/source/less/blocks/posts-item.less
@@ -1,50 +1,50 @@
 .posts-item {
-  &__review--grey {
+  &--grey {
     background-color: @bg--grey;
   }
 
-  &__img-wrapper {
-    padding: 0;
-    margin: 0;
-  }
-
-  &__review {
-    padding: 20px;
-  }
-
-  &__flag {
-    color: @text--white;
-    font-size: @font-size--small;
-    font-weight: @font-weight--big;
-    line-height: @line-height--medium;
-    background-color: @pink;
-  }
-
-  &__name {
-    color: @black;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--big;
-    line-height: @line-height--medium;
-  }
-
-  &__date {
-    color: @grey--dark;
-    font-size: @font-size--small;
-    font-weight: @font-weight--light;
-    line-height: @line-height--medium;
-  }
-
-  &__blockquote {
-    color: @grey--dark;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--medium;
-  }
-
-  &__like--amount {
+  &--amount {
     color: @pink;
     font-size: @font-size--small;
     font-weight: @font-weight--regular;
     line-height: @line-height--medium;
   }
+}
+
+.posts-item__img-wrapper {
+  padding: 0;
+  margin: 0;
+}
+
+.posts-item__review {
+  padding: 20px;
+}
+
+.posts-item__flag {
+  color: @text--white;
+  font-size: @font-size--small;
+  font-weight: @font-weight--big;
+  line-height: @line-height--medium;
+  background-color: @pink;
+}
+
+.posts-item__name {
+  color: @black;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--big;
+  line-height: @line-height--medium;
+}
+
+.posts-item__date {
+  color: @grey--dark;
+  font-size: @font-size--small;
+  font-weight: @font-weight--light;
+  line-height: @line-height--medium;
+}
+
+.posts-item__blockquote {
+  color: @grey--dark;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--medium;
 }
