--- a/source/less/blocks/posts-slogan.less
+++ b/source/less/blocks/posts-slogan.less
@@ -1,10 +1,10 @@
 .posts-slogan {
   background-color: @bg--white;
+}
 
-  &__heading {
-    color: @grey--dark;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--large;
-  }
+.posts-slogan__heading {
+  color: @grey--dark;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--large;
 }
