--- a/source/less/blocks/price-table.less
+++ b/source/less/blocks/price-table.less
@@ -2,48 +2,48 @@
   width: 850px;
   margin: 50px auto 35px;
   border-collapse: collapse;
+}
 
-  &__header {
-    width: 25%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: @grey--dark;
-    color: @text--white;
-    border: 2px solid #e5e5e5;
-  }
+.price-table__header {
+  width: 25%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: @grey--dark;
+  color: @text--white;
+  border: 2px solid #e5e5e5;
+}
 
-  &__flag {
-    color: @text--white;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--large;
-    background-color: @pink;
-  }
+.price-table__flag {
+  color: @text--white;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--large;
+  background-color: @pink;
+}
 
-  &__cost {
-    color: @text--white;
-    font-size: @font-size--big;
-    font-weight: @font-weight--big;
-    line-height: @line-height--large;
-  }
+.price-table__cost {
+  color: @text--white;
+  font-size: @font-size--big;
+  font-weight: @font-weight--big;
+  line-height: @line-height--large;
+}
 
-  &__title {
-    color: @text--white;
-    font-size: @font-size--h2;
-    font-weight: @font-weight--light;
-    line-height: @line-height--large;
-  }
+.price-table__title {
+  color: @text--white;
+  font-size: @font-size--h2;
+  font-weight: @font-weight--light;
+  line-height: @line-height--large;
+}
 
-  &__service {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 25px;
-    color: @grey--dark;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--large;
-    text-align: left;
-    background-color: @bg--white;
-    border: 2px solid #e5e5e5;
-  }
+.price-table__service {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 25px;
+  color: @grey--dark;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--large;
+  text-align: left;
+  background-color: @bg--white;
+  border: 2px solid #e5e5e5;
 }
