--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,16 +1,14 @@
-.site-list {
-  &__item {
-    padding: 15px 10px 15px 0;
-    border-bottom: 1px solid @black;
-    border-top: 1px solid #485461;
-  }
+.site-list__item {
+  padding: 15px 10px 15px 0;
+  border-bottom: 1px solid @black;
+  border-top: 1px solid #485461;
+}
 
-  &__link {
-    color: @text--white;
-    font-size: @font-size--big;
-    line-height: @line-height--big;
-    font-weight: @font-weight--big;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
+.site-list__link {
+  color: @text--white;
+  font-size: @font-size--big;
+  line-height: @line-height--big;
+  font-weight: @font-weight--big;
+  text-transform: uppercase;
+  text-decoration: none;
 }
