--- a/source/less/blocks/contacts-item.less
+++ b/source/less/blocks/contacts-item.less
@@ -1,15 +1,13 @@
-.contacts-item {
-  &__title {
-    color: @grey--dark;
-    font-size: @font-size--big;
-    font-weight: @font-weight--big;
-    line-height: @line-height--base;
-  }
+.contacts-item__title {
+  color: @grey--dark;
+  font-size: @font-size--big;
+  font-weight: @font-weight--big;
+  line-height: @line-height--base;
+}
 
-  &__contact {
-    color: @pink;
-    font-size: @font-size--h2;
-    font-weight: @font-weight--light;
-    line-height: @line-height--medium;
-  }
+.contacts-item__contact {
+  color: @pink;
+  font-size: @font-size--h2;
+  font-weight: @font-weight--light;
+  line-height: @line-height--medium;
 }
