--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,8 +1,6 @@
-.contacts {
-  &__heading {
-    color: @grey--dark;
-    font-size: @font-size--h2;
-    font-weight: @font-weight--light;
-    line-height: @line-height--medium;
-  }
+.contacts__heading {
+  color: @grey--dark;
+  font-size: @font-size--h2;
+  font-weight: @font-weight--light;
+  line-height: @line-height--medium;
 }
