--- a/source/less/blocks/download-app.less
+++ b/source/less/blocks/download-app.less
@@ -1,32 +1,32 @@
 .download-app {
   background-color: @bg--dark;
+}
 
-  &__wrapper {
-    padding-top: 28px;
-    padding-bottom: 21px;
-  }
+.download-app__wrapper {
+  padding-top: 28px;
+  padding-bottom: 21px;
+}
 
-  &__btn {
-    color: @text--white;
-    font-size: @font-size--big;
-    font-weight: @font-weight--big;
-    line-height: @font-size--big;
-    text-decoration: none;
-    padding: 12px 35px 12px 35px;
-    border-radius: 50px;
-    border: 2px solid @text--white;
-  }
+.download-app__btn {
+  color: @text--white;
+  font-size: @font-size--big;
+  font-weight: @font-weight--big;
+  line-height: @font-size--big;
+  text-decoration: none;
+  padding: 12px 35px;
+  border-radius: 50px;
+  border: 2px solid @text--white;
+}
 
-  &__description {
-    color: @text--white;
-    font-size: @font-size--reg;
-    font-weight: @font-weight--light;
-    line-height: @line-height--medium;
-  }
+.download-app__description {
+  color: @text--white;
+  font-size: @font-size--reg;
+  font-weight: @font-weight--light;
+  line-height: @line-height--medium;
+}
 
-  &__platforms {
-    height: 50px;
-    margin: 31px auto 24px;
-    padding: auto;
-  }
+.download-app__platforms {
+  height: 50px;
+  margin: 31px auto 24px;
+  padding: auto;
 }
