--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,8 +4,8 @@
   width: 100%;
   border-top: 1px solid #000000;
   background-color: @grey--dark;
+}
 
-  &__wrapper {
-    border-top: 1px solid @black;
-  }
+.main-nav__wrapper {
+  border-top: 1px solid @black;
 }
