--- a/source/less/blocks/popup.less
+++ b/source/less/blocks/popup.less
@@ -1,27 +1,25 @@
-.popup {
-  &__wrapper-top {
-    background-color: @bg--white;
-  }
+.popup__wrapper-top {
+  background-color: @bg--white;
+}
 
-  &__title {
-    color: @black;
-    font-size: @font-size--big;
-    font-weight: @font-weight--big;
-    line-height: @line-height--medium;
-  }
+.popup__title {
+  color: @black;
+  font-size: @font-size--big;
+  font-weight: @font-weight--big;
+  line-height: @line-height--medium;
+}
 
-  &__wrapper-bott {
-    background-color: @bg--grey;
-  }
+.popup__wrapper-bott {
+  background-color: @bg--grey;
+}
 
-  &__btn {
-    color: @text--white;
-    font-size: @font-size--big;
-    font-weight: @font-weight--big;
-    line-height: @line-height--large;
-    background-color: @green;
-    border: none;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
+.popup__btn {
+  color: @text--white;
+  font-size: @font-size--big;
+  font-weight: @font-weight--big;
+  line-height: @line-height--large;
+  background-color: @green;
+  border: none;
+  text-decoration: none;
+  text-transform: uppercase;
 }
