--- a/source/less/blocks/posts-title.less
+++ b/source/less/blocks/posts-title.less
@@ -4,11 +4,11 @@
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-position: center;
   background-repeat: no-repeat, no-repeat;
+}
 
-  &__heading {
-    color: @text--white;
-    font-size: @font-size--h2;
-    font-weight: @font-weight--light;
-    line-height: @line-height--medium;
-  }
+.posts-title__heading {
+  color: @text--white;
+  font-size: @font-size--h2;
+  font-weight: @font-weight--light;
+  line-height: @line-height--medium;
 }
