--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,6 +1,22 @@
 .features {
+  height: 1002px;
   color: @grey--dark;
   background-color: @text--white;
+  background-image: url("../img/iphone-screen-mobile@1x.png");
+  background-repeat: no-repeat;
+  background-position: bottom center;
+}
+
+.features__title {
+  height: 217px;
+}
+
+.features__items {
+  height: 786px;
+}
+
+.features-item {
+  height: 100px;
 }
 
 .features__wrapper {
