--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,7 +1,21 @@
+.site-list {
+  // min-height: 325px;
+}
+
+@media (min-width: @desktop-width) {
+  .site-list {
+    width: 790px;
+    margin-right: 130px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .site-list__item {
-  padding: 15px 10px 15px 0;
-  border-bottom: 1px solid @black;
-  border-top: 1px solid #485461;
+  padding: 20px 0;
+  //padding: 15px 10px 15px 0;
+  //border-bottom: 1px solid @black;
+  //border-top: 1px solid #485461;
 }
 
 .site-list__link {
