--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -26,3 +26,7 @@
 @line-height--medium:       24px;
 @line-height--large:        30px;
 @line-height--big:          32px;
+@line-height--xxl:          36px;
+
+@tablet-width:              660px;
+@desktop-width:             1200px;
