--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,11 +1,29 @@
 .main-nav {
-  top: 100%;
-  left: 0;
   width: 100%;
-  border-top: 1px solid #000000;
+  height: 66px;
+  margin: 0 auto;
   background-color: @grey--dark;
 }
 
-.main-nav__wrapper {
-  border-top: 1px solid @black;
+@media (min-width: @tablet-width) {
+  .main-nav {
+    height: 110px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav {
+    height: 110px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+
+  .main-nav__toggle {
+    display: none;
+  }
+}
+
+.main-nav__list {
+  .reset-list();
 }
