--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -2,6 +2,19 @@
   width: 100%;
   height: 200px;
   background-image: url("../img/bg-map-mobile@1x.png");
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
+}
+
+@media (min-width: @tablet-width) {
+  .map {
+    height: 370px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .map {
+    height: 500px;
+  }
 }
