--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,11 +1,19 @@
 .page-intro {
-  background-color: @bg--dark;
-  background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
-  background-position: center, center top;
-  background-repeat: no-repeat, no-repeat;
-  background-size: auto, auto;
+  height: 271px;
 }
 
-.page-intro__wrapper {
-  padding: 415px 0 0;
+@media (min-width: @tablet-width) {
+  .page-intro {
+    width: 370px;
+    height: 520px;
+    margin-top: -320px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-intro {
+    width: 370px;
+    height: 520px;
+    margin-top: -320px;
+  }
 }
