--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,6 +1,11 @@
 .price {
+  height: 473px;
   padding-top: 90px;
   padding-bottom: 30px;
   text-transform: uppercase;
   background-color: @bg--grey;
+}
+
+.price-table__header--empty {
+  visibility: hidden;
 }
