--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,5 +1,5 @@
 body {
-  width: 100%;
+  min-width: 320px;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -13,10 +13,4 @@ body {
 img {
   max-width: 100%;
   height: auto;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
