--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 
 @import "global/fonts.less";
 @import "global/visually-hidden.less";
+@import "global/mixins.less";
 
 @import "scaffolding.less";
 
@@ -13,6 +14,7 @@
 @import "blocks/download-app.less";
 @import "blocks/features.less";
 @import "blocks/features-item.less";
+@import "blocks/proof.less";
 @import "blocks/reviews.less";
 @import "blocks/price.less";
 @import "blocks/price-table.less";
