--- a/source/less/blocks/contacts-item.less
+++ b/source/less/blocks/contacts-item.less
@@ -1,3 +1,7 @@
+.contacts-item {
+  margin: auto;
+}
+
 .contacts-item__title {
   color: @grey--dark;
   font-size: @font-size--big;
@@ -10,4 +14,10 @@
   font-size: @font-size--h2;
   font-weight: @font-weight--light;
   line-height: @line-height--medium;
+}
+
+@media (min-width: @desktop-width) {
+  .contacts-item--mail {
+    order: 2;
+  }
 }
