--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,6 @@
 .page-header {
+  width: 320px;
   height: 462px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   color: @text--white;
@@ -11,14 +11,23 @@
   background-size: auto, cover;
 }
 
+.main-nav__wrapper {
+  width: 280px;
+  padding: 0 20px;
+}
+
 @media (min-width: @tablet-width) {
   .page-header {
+    width: 620px;
     height: 729px;
+    padding: 0 20px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
+    width: 960px;
     height: 853px;
+    padding: 0 120px;
   }
 }
