--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,33 +1,49 @@
 .page-header {
-  width: 320px;
-  height: 462px;
+  // min-height: 325px;
   display: flex;
   flex-direction: column;
+  position: relative;
+  z-index: 1;
+
   color: @text--white;
   background-color: @bg--dark;
-  background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
-  background-position: bottom, center top;
-  background-repeat: no-repeat, no-repeat;
-  background-size: auto, cover;
 }
 
-.main-nav__wrapper {
-  width: 280px;
+.page-header__wrapper {
   padding: 0 20px;
+  background-color: @grey--dark;
+  border: 1px solid red;
+}
+
+.page-header_menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid green;
 }
 
 @media (min-width: @tablet-width) {
   .page-header {
-    width: 620px;
-    height: 729px;
     padding: 0 20px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
-    width: 960px;
-    height: 853px;
     padding: 0 120px;
+  }
+
+  .page-header__wrapper {
+    width: 940px;
+    margin: 0 auto;
+  }
+
+  .page-header__container {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .page-header__toggle {
+    display: none;
   }
 }
