--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -17,6 +17,7 @@
 @font-size--big:            18px;
 @font-size--h1:             30px;
 @font-size--h2:             24px;
+@font-size--xxxl:           40px;
 
 @font-weight--light:        lighter;
 @font-weight--regular:      regular;
@@ -27,6 +28,8 @@
 @line-height--large:        30px;
 @line-height--big:          32px;
 @line-height--xxl:          36px;
+@line-height--xxxl:         40px;
+
 
 @tablet-width:              660px;
-@desktop-width:             1200px;
+@desktop-width:             960px;
