--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,15 +13,18 @@
 @import "blocks/site-list.less";
 @import "blocks/page-intro.less";
 @import "blocks/download-app.less";
+@import "blocks/offer.less";
 @import "blocks/features.less";
-@import "blocks/features-item.less";
 @import "blocks/proof.less";
 @import "blocks/reviews.less";
+@import "blocks/slider.less";
+
 @import "blocks/price.less";
 @import "blocks/price-table.less";
-@import "blocks/page-footer.less";
 @import "blocks/contacts.less";
-@import "blocks/contacts-item.less";
+
+@import "blocks/page-footer.less";
+@import "blocks/social-links.less";
 @import "blocks/map.less";
 
 @import "blocks/posts-title.less";
