--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -15,6 +15,7 @@
 @font-size--small:          12px;
 @font-size--reg:            14px;
 @font-size--big:            18px;
+@font-size--big-ex:         20px;
 @font-size--h1:             30px;
 @font-size--h2:             24px;
 @font-size--xxxl:           40px;
