--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,7 +1,8 @@
 .map {
-  width: 100%;
-  height: 200px;
-  background-image: url("../img/bg-map-mobile@1x.png");
+  position: relative;
+  height: 195px;
+  margin-top: 35px;
+  background: url("../img/bg-map-mobile@1x.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -9,12 +10,19 @@
 
 @media (min-width: @tablet-width) {
   .map {
-    height: 370px;
+    height: 380px;
+    margin-top: 25px;
+    background-image: url("../img/bg-map-mobile@1x.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: 60%;
   }
 }
 
 @media (min-width: @desktop-width) {
   .map {
-    height: 500px;
+    height: 525px;
+    margin-top: 0;
+    background-image: url("../img/bg-map-mobile@1x.png");
   }
 }
