Подправил по инст.

--- a/source/less/blocks/download-app.less
+++ b/source/less/blocks/download-app.less
@@ -1,5 +1,5 @@
 .download-app {
-  padding: 25px 20px 30px;
+  padding: 25px 0 30px;
   background-color: @bg--dark;
   color: @text--white;
   border: 1px solid yellow;
@@ -72,7 +72,7 @@
     font-size: @font-size--big;
   }
 }
-// .pdownload-app__buttons {
+// .download-app__buttons {
 //   max-width: 240px;
 //   display: flex;
 //   justify-content: space-around;
