--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -19,7 +19,6 @@
 }
 
 .page-footer__logo {
-  display: block;
   align-self: flex-start;
   width: 145px;
   height: 40px;
@@ -34,4 +33,10 @@
     margin-left: 10px;
     // background-image: url("../img/logo-pink-blue-mobile.svg");
   }
+}
+
+.page-footer__copyright {
+  font-size: @font-size--reg;
+  line-height: 18px;
+  color: @grey--dark;
 }
