--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -5,7 +5,7 @@
 
 .page-intro__wrapper {
   min-height: 460px;
-  padding: 1px 20px;
+  // padding: 1px 20px;
   background: url("../img/iphone-hand-mobile@1x.png") 50% 175px no-repeat, url("../img/bg-back-mobile@1x.jpg") 50% 0 no-repeat;
   background-size: contain, cover;
   border: 1px solid red;
@@ -14,7 +14,7 @@
 @media (min-width: @tablet-width) {
   .page-intro__wrapper {
     min-height: 725px;
-    padding: 1px 40px;
+    // padding: 1px 40px;
     background: url("../img/iphone-hand-mobile@1x.png") 80% 100% no-repeat, url("../img/bg-back-mobile@1x.jpg") 50% 100% no-repeat;
     background-size: 490px, cover;
     text-align: center;
@@ -24,7 +24,7 @@
 @media (min-width: @desktop-width) {
   .page-intro__wrapper {
     min-height: 855px;
-    padding: 1px 10%;
+    // padding: 1px 10%;
     background: url("../img/iphone-hand-mobile@1x.png") 75% 100% no-repeat, url("../img/bg-back-mobile@1x.jpg") 50% 50% no-repeat;
     background-size: 580px, cover;
   }
@@ -38,7 +38,7 @@
 
 @media (min-width: @tablet-width) {
   .page-intro__title {
-    padding: 200px 55% 0 0;
+    padding: 200px 50% 0 0;
     font-size: @line-height--xxxl;
     line-height: 50px;
   }
