--- a/source/less/container.less
+++ b/source/less/container.less
@@ -2,6 +2,7 @@
   width: 280px;
   padding: 0 20px;
   margin: 0 auto;
+  border: 1px dashed blue;
 
   @media (min-width: @tablet-width) {
     width: 620px;
@@ -9,5 +10,6 @@
 
   @media (min-width: @desktop-width) {
     width: 940px;
+    padding: 0 10px;
   }
 }
